gdpr: translations english -> french

--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -13,172 +13,125 @@
 {% block content %}
 
 <h1>{% trans "Privacy policy" %}</h1>
-
+{% blocktrans %}
 <section class="privacy">
-    <h2>Prologin et vos données personnelles</h2>
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#processing" aria-expanded="false"
-        aria-controls="processing">
-        <h3>Objet du traitement de données</h3>
+    <h2>Prologin and your Personal Data</h2>
+
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#processing" aria-expanded="false" aria-controls="processing">
+        <h3>About the Processing</h3>
     </button>
     <div class="collapse" id="processing">
-        <h4>Finalités</h4>
-        <p>Le traitement a pour objet <strong>l'organisation du concours
-                Prologin</strong>.<br>
-            Il permet à l'association Prologin :
+        <h4>Purposes</h4>
+        <p>The processing goal is to <strong>organize the Prologin contest</strong>.
+            <br> It enables the Prologin association to:
             <ul>
-                <li>de traiter les demandes d'inscription sur le site Prologin ;</li>
-                <li>de fournir les services de communication (forum) et
-                    d'évaluation de code (juge en ligne) ;</li>
-                <li>de traiter les demandes de participation au concours
-                    Prologin ;</li>
-                <li>d'adapter les repas aux contraintes alimentaires de chacun ;</li>
-                <li>de répondre aux sollicitations de la part des participants ;</li>
-                <li>de piloter l'activité de l'association (évaluation de la
-                    satisfaction des participants, production de statistiques).</li>
+                <li>to process registration requests on the Prologin website;</li>
+                <li>providing communication services (forum) and
+                    code evaluation (online judge) ;</li>
+                <li>processing applications for participation in the Prologin
+                    contest;</li>
+                <li>tailor the meals taking into account each dieatry restrictions;</li>
+                <li>answer questions from the participants;</li>
+                <li>steer the activity of the association (evaluate participant satisfaction, produce statistics).</li>
             </ul>
         </p>
 
-        <h4>Base légale</h4>
-        <p>Ce traitement repose sur le consentement des inscrits et de leur
-            responsable légal le cas échéant (mineurs de 16 ans), ce sont les
-            articles 6(1)a et 8 du RGPD.</p>
+        <h4>Lawfulness of Processing</h4>
+        <p>The data subjects give consent to the processing of their personal data for the declared purposes (art. 6(1)a of GDPR).</p>
     </div>
 
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#processed_data"
-        aria-expanded="false" aria-controls="processed_data">
-        <h3>Données traitées</h3>
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#processed_data" aria-expanded="false" aria-controls="processed_data">
+        <h3>Processed Data</h3>
     </button>
     <div class="collapse" id="processed_data">
-        <h4>Catégories de données traitées</h4>
-        <p>L'inscription sur le site nécessite les catégories de données
-            suivantes :</p>
+        <h4>Data Categories</h4>
+        <p>Registration on the site requires the following categories of data:</p>
         <ul>
-            <li>Données d'identification : pseudonyme, adresse email ;</li>
-            <li>Internet : mesure d'audience ;</li>
-        </ul>
-        <p>La participation au concours requiert des informations
-            complémentaires :</p>
-        <ul>
-            <li>Données d'identification : nom, prénom, adresse postale, date de
-                naissance... ;</li>
-            <li>Vie scolaire (dite professionnelle) : niveau d'étude ;</li>
-            <li>Vie personnelle : habitudes alimentaires ;</li>
-            <li>Internet : mesure d'audience ;</li>
-            <li>Données de santé : éventuels traitements médicaux et allergies.</li>
+            <li>Identification: pseudonyme, email;</li>
+            <li>Internet: audience measurement;</li>
         </ul>
 
-        <h4>Source des données</h4>
-        <p>Ces informations sont recueillies directement auprès du participant,
-            et/ou de son responsable légal le cas échéant (mineurs de 16 ans).</p>
-        <h4>Caractère obligatoire des réponses</h4>
-        <p>L'inscription au site Prologin prévoit, sauf mention contraire, le
-            recueil obligatoire de données qui sont nécessaires au traitement de
-            l'inscription.</p>
-        <p>La participation à une édition du concours Prologin prévoit, sauf
-            mention contraire, le recueil obligatoire de données qui sont
-            nécessaires au traitement de l'inscription et l'accueil sur site
-            dans de bonnes conditions.</p>
+        <p>Participation in the contest requires additional information:</p>
+        <ul>
+            <li>Identification: name, firstname, address...;</li>
+            <li>School life (also referred to as professional life): current class level;</li>
+            <li>Personal life: dietary constraints;</li>
+            <li>Internet: audience measurement;</li>
+            <li>Health data: medical treatments and allergies.</li>
+        </ul>
 
-        <h4>Prise de décision automatisée</h4>
-        <p>Le traitement peut inclure une décision entièrement automatisée : les
-            demandes de participation au concours Prologin d'un niveau
-            manifestement insuffisant (évaluation par le juge en ligne Prologin)
-            sont automatiquement écartées. Bien que cette décision automatique
-            ne produise ni effet juridique ni impact significatif, Prologin peut
-            être <a href="mailto:info@prologin.org">contacté directement</a> pour demander une évaluation manuelle.  </p>
+        <h4>Data Source</h4>
+        <p>These informations are collected directly from the applicant, and/or from the holder of parental authority when necessary (candidate is less than 16).</p>
+
+        <h4>Mandatory Answers</h4>
+        <p>Registration to the Prologin website requires (unless specified) the collection of data necessary to process the registration.</p>
+        <p>Participating in an edition of the Prologin contest requires (unless specified) the collection of data necessary to process the application and the reception on site in good conditions..</p>
+
+        <h4>Automated Individual Decision-making</h4>
+        <p>The processing may include a fully automated decision: applications for entry into the Prologin contest that are clearly insufficient (evaluation by the Prologin online judge) are automatically rejected. Although this automatic decision has no legal effect and no significant impact, Prologin can be contacted directly.</p>
     </div>
 
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#data_subjects"
-        aria-expanded="false" aria-controls="data_subjects">
-        <h3>Personnes concernées</h3>
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#data_subjects" aria-expanded="false" aria-controls="data_subjects">
+        <h3>Data Subjects</h3>
     </button>
     <div class="collapse" id="data_subjects">
-        <p>Le traitement de données concerne :
+        <p>This processing involves:
+            <ul>
+                <li>natural persons registering to the Prologin website;</li>
+                <li>natural persons applying to the Prologin contest;</li>
+                <li>holder of parental authorities for the above persons if necessary (applicant is less than 16);</li>
+                <li>members of Prologin;</li>
+                <li>natural or legal persons from Prologin partners and/or sub-processors.</li>
+            </ul>
         </p>
-        <ul>
-            <li>les personnes physiques souhaitant s'inscrire sur le site
-                Prologin ;</li>
-            <li>les personnes physiques souhaitant participer au concours
-                Prologin ;</li>
-            <li>les responsables légaux des personnes ci-dessus le cas échéant
-                (mineurs de 16 ans) ;</li>
-            <li>les membres de Prologin ;</li>
-            <li>les personnes physiques ou morales partenaires ou sous-traitants
-                de Prologin.</li>
-        </ul>
-
-        <h3>Destinataires des données</h3>
-        <h4>Catégories de destinataires</h4>
-        <p>En fonction de leurs besoins respectifs, sont destinataires de tout
-            ou partie des données :
-        </p>
-        <ul>
-            <li>les membres autorisés de Prologin ;</li>
-            <li>les membres autorisés des partenaires et/ou sous-traitants de
-                Prologin ;</li>
-            <li>les services de secours d'urgence en cas de besoin.</li>
-        </ul>
-
-        <h4>Transfert des données hors UE</h4>
-        <p>Des transferts de données hors de l'Union européenne peuvent avoir
-            lieu (partenaire en Suisse pour l'organisation d'une épreuve
-            régionale). Cela ne concerne que les candidats au concours Prologin
-            participant aux épreuves régionales en Suisse.</p>
     </div>
 
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#storage_period"
-        aria-expanded="false" aria-controls="storage_period">
-        <h3>Durée de conservation</h3>
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#data_recipients" aria-expanded="false" aria-controls="data_recipients">
+        <h3>Data Recipients</h3>
+    </button>
+    <div class="collapse" id="data_recipients">
+        <h4>Categories of Recipients</h4>
+        <p>Taking into account their respective needs, the following are recipient of all or any parts of the data:
+            <ul>
+                <li>authorized members of Prologin;</li>
+                <li>authorized members of Prologin partners and/or sub-contractors;</li>
+                <li>emergency services if needed.</li>
+            </ul>
+        </p>
+
+        <h4>Data Transfers Outside of EU</h4>
+        <p>Data transfers outside the European Union may take place (partner in Switzerland for the organisation of a regional event). This only concerns Prologin candidates participating in regional events in Switzerland.</p>
+    </div>
+
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#storage_period" aria-expanded="false" aria-controls="storage_period">
+        <h3>Storage Period</h3>
     </button>
     <div class="collapse" id="storage_period">
-        <p>Les données d’identification, de vie scolaire et personnelle sont
-            conservées jusqu'à la désinscription de la personne.<br>
-            Les données de santé sont conservées jusqu'à 3 ans après la fin de
-            la finale .</p>
+        <p>Identification data, school and personal life are stored until the data subject unsubscribe from Prologin.
+            <br> Health data are deleted three years after the end of the final.</p>
+
     </div>
 
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#security" aria-expanded="false"
-        aria-controls="security">
-        <h3>Sécurité</h3>
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#security" aria-expanded="false" aria-controls="security">
+        <h3>Security</h3>
     </button>
     <div class="collapse" id="security">
-        <p>Des mesures de sécurité visant à garantir la confidentialité,
-            l'intégrité et la disponibilité des données collectées, issues du
-            référentiel ISO/IEC27002 ont été mises en œuvre. Elles comprennent,
-            sans s'y limiter, le chiffrement des données en transit et leur
-            sauvegarde régulière externalisée.</p>
+        <p>Some security measures, aiming to ensure confidentiality, integrity and availability of the data, have been implemented. They are extracted from the ISO/IEC27002 standard. It includes, without being limited to, data encryption in-transit and externalized backups.</p>
     </div>
 
-    <button class="btn btn-default btn-block" type="button"
-        data-toggle="collapse" data-target="#your_rights" aria-expanded="false"
-        aria-controls="your_rights">
-        <h3>Vos droits sur vos données</h3>
+    <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#your_rights" aria-expanded="false" aria-controls="your_rights">
+        <h3>Your Rights</h3>
     </button>
     <div class="collapse" id="your_rights">
-        <h4>L'essentiel</h4>
-        <p>Vous disposez (le cas échéant <em>via</em> le responsable légal) des
-            droits d'accéder et d'obtenir copie des données vous concernant, de
-            vous opposer au traitement de ces données, de les faire rectifier ou
-            les faire effacer. Vous disposez également d'un droit à la
-            limitation du traitement de vos données. Vous disposez enfin d'un
-            droit à un réexamen par un être humain de votre candidature au
-            concours, si vous avez fait l'objet d'une décision automatisée. <a
-                href="https://www.cnil.fr/fr/comprendre-vos-droits">Rendez-vous
-                sur le site de la CNIL pour mieux comprendre vos droits.</a></p>
-        <h4>Exercer vos droits</h4>
-        <p>Toute demande d'exercice de vos droits doit être adressée par voie
-            électronique à <a href="mailto:info@prologin.org">info@prologin.org</a>.</p>
-        <h4>Réclamation auprès de la CNIL</h4>
-        <p>Si vous estimez, après nous avoir contacté, que vos droits sur vos
-            données ne sont pas respectés, vous pouvez alors <a
-                href="https://www.cnil.fr/fr/webform/adresser-une-plainte">adresser
-                une réclamation à la CNIL</a>.
-        </div>
-    </section>
+        <h4>The Essential</h4>
+        <p>You have (<em>via</em> the holder of parental authorities when applicable) the right to access and obtain a copy of your personal data, to object to their processing, to rectify or to erase them. You also have the right to restrict the processing of your data. Finally, you have the right to have your application for the contest re-examined by a human being if you have been the subject of an automated decision. Please refer to the website of your national Data Protection Authority to learn more about your rights.</p>
 
+        <h4>How to Exercize your Rights</h4>
+        <p>Any request must be sent by email to <a href="mailto:info@prologin.org">info@prologin.org</a>.</p>
+
+        <h4>Lodging a Complaint</h4>
+        <p>Should you think your right are not respected, and after having contacted us, you can lodge a complaint with your national Data Protection Authority.</p>
+    </div>
+</section>
+    {% endblocktrans %}
     {% endblock %}
