--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -25,12 +25,12 @@
         <p>The processing goal is to <strong>organize the Prologin contest</strong>.
             <br> It enables the Prologin association to:
             <ul>
-                <li>to process registration requests on the Prologin website;</li>
-                <li>providing communication services (forum) and
+                <li>process registration requests on the Prologin website;</li>
+                <li>provide communication services (forum) and
                     code evaluation (online judge) ;</li>
-                <li>processing applications for participation in the Prologin
+                <li>process applications for participation in the Prologin
                     contest;</li>
-                <li>tailor the meals taking into account each dieatry restrictions;</li>
+                <li>tailor the meals taking into account each dietary restrictions;</li>
                 <li>answer questions from the participants;</li>
                 <li>steer the activity of the association (evaluate participant satisfaction, produce statistics).</li>
             </ul>
@@ -47,11 +47,11 @@
         <h4>Data Categories</h4>
         <p>Registration on the site requires the following categories of data:</p>
         <ul>
-            <li>Identification: pseudonyme, email;</li>
+            <li>Identification: pseudonym, email;</li>
             <li>Internet: audience measurement;</li>
         </ul>
 
-        <p>Participation in the contest requires additional information:</p>
+        <p>Entering the contest requires additional information:</p>
         <ul>
             <li>Identification: name, firstname, address...;</li>
             <li>School life (also referred to as professional life): current class level;</li>
@@ -64,8 +64,8 @@
         <p>These informations are collected directly from the applicant, and/or from the holder of parental authority when necessary (candidate is less than 16).</p>
 
         <h4>Mandatory Answers</h4>
-        <p>Registration to the Prologin website requires (unless specified) the collection of data necessary to process the registration.</p>
-        <p>Participating in an edition of the Prologin contest requires (unless specified) the collection of data necessary to process the application and the reception on site in good conditions..</p>
+        <p>Registration to the Prologin website requires (unless specified otherwise) the collection of data necessary to process the registration.</p>
+        <p>Entering the Prologin contest requires (unless specified otherwise) the collection of data necessary to process the application and ensure on-site events are correctly held.</p>
 
         <h4>Automated Individual Decision-making</h4>
         <p>The processing may include a fully automated decision: applications for entry into the Prologin contest that are clearly insufficient (evaluation by the Prologin online judge) are automatically rejected. Although this automatic decision has no legal effect and no significant impact, Prologin can be contacted directly.</p>
@@ -100,7 +100,7 @@
         </p>
 
         <h4>Data Transfers Outside of EU</h4>
-        <p>Data transfers outside the European Union may take place (partner in Switzerland for the organisation of a regional event). This only concerns Prologin candidates participating in regional events in Switzerland.</p>
+        <p>Data transfers outside the European Union may take place (partner in Switzerland for the organisation of a regional event). This is only applicable for Prologin candidates participating in regional events in Switzerland.</p>
     </div>
 
     <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#storage_period" aria-expanded="false" aria-controls="storage_period">
