--- a/prologin/users/templates/users/register.html
+++ b/prologin/users/templates/users/register.html
@@ -19,9 +19,21 @@
   {% csrf_token %}
   {{ form|bootstrap_horizontal }}
   <div class="form-group">
+    <small class="col-sm-offset-2 col-sm-10">{% trans "I consent to the processing of my personal data above by Prologin." %}</small> 
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <input class="btn btn-primary" type="submit" value="{% trans "Register" %}">
     </div>
+  </div>
+  <div class="form-group">
+    <p class="help-block col-sm-offset-2 col-sm-10">
+      {% blocktrans %}
+        Prologin is organised by the Prologin Association, which acts as the data controller. The answers collected in this form allow us to provide the services (communication and online judging) and to prepare the competition: selections, dietary restrictions, etc...
+        To learn more about our data management and your rights, please visit 
+      {% endblocktrans %}
+      <a href="{% url 'pages:about-privacy-policy' %}">{% trans "our dedicated page." %}</a>
+    </p>
   </div>
 </form>
 
