final2020: change displayed date to temporary text

--- a/prologin/homepage/templates/homepage/jumbotron-final.html
+++ b/prologin/homepage/templates/homepage/jumbotron-final.html
@@ -7,8 +7,9 @@
         <h4>{% trans "Final" %}</h4>
         <p class="date">
           {% if final.date_begin or final.date_end %}
-          {{ final.date_begin|date:"d b Y"|default:no_such_date }}
-          →&nbsp;{{ final.date_end|date:"d b Y"|default:no_such_date }}
+          <!--{{ final.date_begin|date:"d b Y"|default:no_such_date }}
+          →&nbsp;{{ final.date_end|date:"d b Y"|default:no_such_date }}-->
+            {% trans 'Due to the sanitary crisis, the final date will be announced later.' %}
           {% else %}
             {{ no_such_date }}
           {% endif %}
