about-gcc: fixing weird equal sign

--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -111,7 +111,7 @@ backgrounds, thus helping them for their orientation.</p>
 <p class="text-justify">Prologin's members are present during the camp to accompany them and to help them debug their 
 programs and to help them understand key principles in computer science and programming.</p>
 
-<p class⁼"text-justify">More information can be found on Girls Can Code! <a href="https://gcc.prologin.org">website</a>. For any 
+<p class="text-justify">More information can be found on Girls Can Code! <a href="https://gcc.prologin.org">website</a>. For any 
 inquiries, please contact us <a href="{{ about_organization }}#contact">here</a>.</p>{% endblocktrans %}
 
   <h2 id="contribute">{% trans "Everyone can contribute to Prologin" %}</h2>
