finale2020: removing comments for date and adding warning banner on the homepage

--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -14,7 +14,17 @@
 
 {% include "homepage/jumbotron.html" %}
 
+
 <div class="container">
+
+<div class="alert alert-dismissable alert-warning">
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <i class="fa fa-exclamation-triangle"></i>
+  <div>
+    <strong>{% trans 'Due to the sanitary crisis, the final date will be announced later. Please read the news for more information.' %}</strong>
+  </div>
+</div>
+
 
   {% include "prologin/messages.html" %}
 
