finale2020: adding hard link to the related news

--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -21,7 +21,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <i class="fa fa-exclamation-triangle"></i>
   <div>
-    <strong>{% trans 'Due to the sanitary crisis, the final date will be announced later. Please read the news for more information.' %}</strong>
+      <strong>{% blocktrans %}Due to the sanitary crisis, the final date will be announced later. Please read this <a href="https://prologin.org/news/A9S/">news</a> for more information.'{% endblocktrans %}</strong>
   </div>
 </div>
 
