--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -175,7 +175,8 @@
 
   </div>
 
-  {% if shown_user.id == user.id or see_private %}
+  {% has_perm 'users.takeout' user shown_user as can_takeout %}
+  {% if can_takeout %}
   <div class="panel panel-info" style="margin-top: 1em">
     <div class="panel-heading">
       <h3 class="panel-title"> {% trans "Account management" %}</h3>
