--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -97,22 +97,22 @@ with us!</p>
 {% url 'pages:about-organization' as about_organization %}
 
 <h2 id="gcc">{% trans "Girls Can Code!" %}</h2>
-{% blocktrans %}<p class="text-justify">In 2014, Prologin started to organize the Girls Can Code! summer camps.
+<p class="text-justify">{% blocktrans %}In 2014, Prologin started to organize the Girls Can Code! summer camps.
 These training camps are the perfect occasion for young girls who are still in middle school or in high school 
 to discover multiple computer science subjects throughout the week. They will learn how to solve problems with 
 algorithms, explore various computer science topics such as network, web development, robotics, microcontrollers, video games 
-and more through practical exercises.</p>
+and more through practical exercises.{% endblocktrans %}</p>
 
-<p class="text-justify">Conferences from exterior speakers are organized for every camp. It enables the attendees 
+<p class="text-justify">{% blocktrans %}Conferences from exterior speakers are organized for every camp. It enables the attendees 
 to exchange with women working in the computer science industry or in academia. The young girls are sometimes 
 unsure as to what they want to do, this is a golden occasion for them to discuss their education with the speaker, 
-thus helping them for future orientation choices.</p>
+thus helping them for future orientation choices.{% endblocktrans %}</p>
 
-<p class="text-justify">Prologin staff is present during the camp to help them debug their programs and pass on 
-knowledge in computer science and programming.</p>
+<p class="text-justify">{% blocktrans %}Prologin staff is present during the camp to help them debug their programs and pass on 
+knowledge in computer science and programming.{% endblocktrans %}</p>
 
-<p class="text-justify">More information can be found on <a href="https://gcc.prologin.org">Girls Can Code! website</a>. For any 
-inquiries, please <a href="{{ about_organization }}#contact">contact us</a>.</p>{% endblocktrans %}
+<p class="text-justify">{% blocktrans %}More information can be found on <a href="https://gcc.prologin.org">Girls Can Code! website</a>. For any 
+inquiries, please <a href="{{ about_organization }}#contact">contact us</a>.{% endblocktrans %}</p>
 
   <h2 id="contribute">{% trans "Everyone can contribute to Prologin" %}</h2>
   {# TODO: link to forums; link to how to promote (posters) #}
