forum: fixing the cite button, no need to refresh anymore

--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -203,6 +203,7 @@
       $('.btn-cite').click(function(e) {
         e.preventDefault();
         var cite_url = $(this).attr('href');
+        console.log(cite_url);
         $.getJSON(cite_url)
           .done(function(data) {
             $post_textarea.val($post_textarea.val() + '\n' + data.message).focus();
