--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -21,7 +21,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <i class="fa fa-exclamation-triangle"></i>
   <div>
-      <strong>{% blocktrans %}Due to the sanitary crisis, the final date will be announced later. Please read this <a href="https://prologin.org/news/A9S/">news</a> for more information.{% endblocktrans %}</strong>
+      <strong>{% blocktrans %}This year's "final" will be online : see this <a href="https://prologin.org/news/A9W">news</a> for more information. The "final" will happen <a href="https://prologin.dev/">here</a>. Installation instructions can be found <a href="https://install.prologin.dev/">here</a>.{% endblocktrans %}</strong>
   </div>
 </div>
 
