--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -5,6 +5,7 @@
 {% if request.current_events.qualification.is_active %}
   <li class="{% active '^/contest/' %}"><a href="{% url 'contest:qualification-summary' request.current_edition.year %}">{% trans "Participate" %}</a></li>
 {% endif %}
+  <li style="background: rgba(241, 196, 15, 0.6)"><a href="https://prologin.dev">{% trans "2020 Final" %}</a></li>
   <li class="{% active '^/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
   <li class="{% active '^/train/' %}"><a href="{% url 'problems:index' %}">{% trans "Train" %}</a></li>
   <li class="{% active '^/archives/' %}"><a href="{% url 'archives:index' %}">{% trans "Archives" %}</a></li>
