--- a/prologin/sponsor/templates/sponsor/index.html
+++ b/prologin/sponsor/templates/sponsor/index.html
@@ -39,7 +39,7 @@
         {% endif %}
         {% for sponsor in typed_sponsors %}
           {% if type == "Gold" %}
-            <div class="row panel">
+            <div class="row panel sponsor-gold">
               <div class="col-sm-6 col-md-3">
           {% else %}
             <div class="col-md-4">
