semifinals: reduce practical test length (4h -> 3h30)

--- a/prologin/pages/templates/pages/about-semifinals.html
+++ b/prologin/pages/templates/pages/about-semifinals.html
@@ -44,11 +44,11 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
     improve.{% endblocktrans %}</p>
 
   <h3>{% trans "The practical test" %}</h3>
-    <p>{% blocktrans %}The practical test lasts four hours. Every contestant
-    works on algorithmic exercises on a computer. A judging program evaluates
-    the code submissions of the contestant. The goal of this test is to check
-    that the contestant is able to code a program on a computer (choose an
-    algorithm, implement it in a programming language, test it and debug it).
+    <p>{% blocktrans %}The practical test lasts three and a half hours. Every
+    contestant works on algorithmic exercises on a computer. A judging program
+    evaluates the code submissions of the contestant. The goal of this test is
+    to check that the contestant is able to code a program on a computer (choose
+    an algorithm, implement it in a programming language, test it and debug it).
     {% endblocktrans %}</p>
 
     <p>{% blocktrans %}All these tests are individual. No other documents than
@@ -73,8 +73,8 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
       <g id="hours">
         <text x="30" y="30">8h30</text>
         <text x="30" y="60">9h00</text>
-        <text x="30" y="180">12h20</text>
-        <text x="30" y="210">13h30</text>
+        <text x="30" y="180">12h00</text>
+        <text x="30" y="210">14h00</text>
         <text x="30" y="330">17h30</text>
       </g>
       <g id="layout">
@@ -93,7 +93,7 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
         <text y="110">{% blocktrans %}<tspan x="375">Interview</tspan> <tspan x="375" dy="20">(15-20 minutes)</tspan>{% endblocktrans %}
         </text>
         <text x="270" y="195">{% trans "Free lunch" %}</text>
-        <text x="270" y="265">{% trans "Algorithmic exercises on computer (4h)" %}</text>
+        <text x="270" y="265">{% trans "Algorithmic exercises on computer (3h30)" %}</text>
     </g>
   </svg>
 
@@ -107,7 +107,7 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
     just worked on.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}The day continues with the practical test, which lasts
-    four hours, and ends at 5:30 PM.{% endblocktrans %}</p>
+    three and a half hours, and ends at 5:30 PM.{% endblocktrans %}</p>
 
   <h2>{% trans "Evaluation methodology" %}</h2>
     <p>{% blocktrans %}The exam submissions are marked according to the
